@@ -1,0 +1,36 @@
+<html>
+
+	<head>
+	
+		<style>
+				p{	font-family:tahoma; 
+					color:blue;
+					font-size:24px;
+				}
+		</style>
+	
+	</head>
+
+
+	<body  style = "background:#f0f0f0;"    >
+	
+		<h1 style = "font-family:courier new;">BMI Calculator</h1>
+		
+		<button onclick = "calculateBMI()">Click me!</button>
+		
+		<p id = "yourBMI"></p>
+		
+	</body>
+	
+	<script>
+	
+		function calculateBMI(){
+		
+			
+		
+		}
+	
+	</script>
+
+
+</html>
