@@ -57,7 +57,7 @@
                 Dismiss
             </button>
             <h2 class = "centerTxt customAlertHeading">Alerts</h2>
-            <p class = "alertTxt" id = "maintinenceAlert">No Alerts</p>
+            <p class = "alertTxt" id = "maintinenceAlert">Cls update alert from 5 AM UTC time to 7 AM UTC time. This will not affect any functionalities of any other part of the website other than JFocus 4 development files.</p>
         </div>
     </footer>
 </html>
