@@ -84,7 +84,9 @@ Nov 21st MT11 (Peter) - Spelling refreshed
 Nov 21st MT12 (Peter) - Spelling refreshed
 
 IT's not my birthday... 😢
-Nov 22st BIRTHDAY2 (Peter) - No Birthday Update...
+Nov 22nd BIRTHDAY2 (Peter) - No Birthday Update...
+
+Nov 22nd Cls11 (Peter) - JFocus 4 Dev Alert/Update
 
 
 
